--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
+
+{% block stylesheets %}
+  {# On charge le CSS de bootstrap depuis le site directement #}
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+{% endblock %}
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
+      <div class="container-fluid">
+          <div class="navbar-header"><a class="navbar-brand" href={{ url('home') }}>Brand</a>
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+              </button>
+          </div>
+          <div class="collapse navbar-collapse navbar-menubuilder">
+              <ul class="nav navbar-nav navbar-left">
+                  <li><a href="{{ url('home') }}">Trouve ton junior</a>
+                  </li>
+                  <li><a href="{{ url('fos_user_security_login') }}">Se connecter</a>
+                  </li>
+                  <li><a href="{{ url('fos_user_security_logout') }}">Se deconnecter</a>
+                  </li>
+                  <li><a href="{{ url('fos_user_registration_register') }}">S'enregistrer</a>
+                  </li>
+                  <li><a href="{{ url('profile_add') }}">Add a profile</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </div>
+
   <title>{% block title %}Trouve ton Junior Entrepreneur{% endblock %}</title>
 
-  {% block stylesheets %}
-    {# On charge le CSS de bootstrap depuis le site directement #}
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  {% endblock %}
-</head>
 
 <body>
   <div class="container">
@@ -24,7 +47,7 @@
     <div class="row">
       <div id="menu" class="col-md-3">
         <p> fdsfdsqfdsqfdsqfdsfqdsfsqf <p>
-      </div>    
+      </div>
       <div id="content" class="col-md-9">
         {% block body %}
         {% endblock %}
