--- a/src/EPFProjets/ProfileBundle/Resources/views/Profile/index.html.twig
+++ b/src/EPFProjets/ProfileBundle/Resources/views/Profile/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "EPFProjetsProfileBundle::layout.html.twig" %}
 {% block body %}
 
-    Profile page
+    ICI OPTIONS DE RECHERCHES
 
 {% endblock %}
