--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -11,7 +11,7 @@
 
   <div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
       <div class="container-fluid">
-          <div class="navbar-header"><a class="navbar-brand" href={{ url('epf_projets_core_homepage') }}>Brand</a>
+          <div class="navbar-header"><a class="navbar-brand" href={{ url('epf_projets_core_homepage') }}>Trouve ton junior</a>
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
               </button>
           </div>
@@ -43,13 +43,8 @@
     </div>
 
     <div class="row">
-      <div id="menu" class="col-md-3">
-        <p> fdsfdsqfdsqfdsqfdsfqdsfsqf <p>
-      </div>
-      <div id="content" class="col-md-9">
         {% block body %}
         {% endblock %}
-      </div>
     </div>
 
     <hr>
