+gestion images (suppression si changement ne fonctionne pas)

--- a/src/EPFProjets/ProfileBundle/Resources/views/Profile/edit.html.twig
+++ b/src/EPFProjets/ProfileBundle/Resources/views/Profile/edit.html.twig
@@ -6,6 +6,7 @@
 {% endfor %}
 
 <div class="row">
+<p>Vous devez changer de photo si vous souhaitez changer de description!</p>
 {{ form(form) }}
 </div>
 
