--- a/src/EPFProjets/ProfileBundle/Resources/views/Profile/edit.html.twig
+++ b/src/EPFProjets/ProfileBundle/Resources/views/Profile/edit.html.twig
@@ -6,9 +6,10 @@
 {% endfor %}
 
 <div class="row">
-<p>Vous devez changer de photo si vous souhaitez changer de description!</p>
+<h2>Vous devez changer de photo si vous souhaitez changer de description!</h2>
+<div class="col-xs-10">
 {{ form(form) }}
 </div>
-
+</div>
 
 {% endblock %}
