--- a/src/EPFProjets/ProfileBundle/Resources/views/Profile/view.html.twig
+++ b/src/EPFProjets/ProfileBundle/Resources/views/Profile/view.html.twig
@@ -37,6 +37,8 @@
 <p>{{ profile.user.getAge }}</p>
 <h2>Nombre de vues</h2>
 <p>{{ profile.nbreVues }} vues</p>
+<h2>Region</h2>
+<p>{{ profile.user.region }}</p>
 <h2>Description</h2>
 <p>{{ profile.description }}</p>
 </div>
