--- a/src/EPFProjets/ProfileBundle/Resources/views/Profile/view.html.twig
+++ b/src/EPFProjets/ProfileBundle/Resources/views/Profile/view.html.twig
@@ -23,7 +23,7 @@
 <h1>{{ profile.user.name }} {{ profile.user.surname }}</h1>
 <p>
 {% if profile.image is not null %}
-<img src="{{ asset('uploads/' ~ profile.image.imageFile) }}" class="img-rounded" width="200" height="200">
+<img src="{{ asset('uploads/' ~ profile.image.imageFile) }}" class="img-rounded" width="200">
 {% endif %}
 </p>
 
@@ -38,7 +38,7 @@
 <h2>Nombre de vues</h2>
 <p>{{ profile.nbreVues }} vues</p>
 <h2>Region</h2>
-<p>{{ profile.user.region }}</p>
+<p>{{ profile.region }}</p>
 <h2>Description</h2>
 <p>{{ profile.description }}</p>
 </div>
