--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -19,6 +19,7 @@
           <div class="collapse navbar-collapse navbar-menubuilder">
               <ul class="nav navbar-nav navbar-left">
                   <li><a href="{{ url('me_profile') }}">Mon profil</a>
+                  <li><a href="{{ url('profile_recherche') }}">Recherche</a>
                   </li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
