--- a/src/EPFProjets/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/EPFProjets/CoreBundle/Resources/views/Default/index.html.twig
@@ -2,12 +2,8 @@
 {% block body %}
 
 <div class="col-md-4">
-<div id="header" class="jumbotron">
-  <h3>Le premier site de rencontre entre juniors entrepreneurs</h3>
-  <p>
-    Rencontre les juniors entrepreneurs de ta région !
-  </p>
-</div>
+<h2>Outil de recherche</h2>
+{{ form(form) }}
 </div>
 
 <div class="col-md-8">
